# documents

./: CreateAlgWikiDoc.py  README.md  formatting_plots.pptx
.github/: stale.yml
Decisions/: 0001-record-architecture-decisions.md  0002-move-to-clang-format-5.md  0003-move-to-visual-studio-2017.md  0004-move-to-devtoolset-7-on-rhel7.md
Design/: Algorithm_ease_of_use.md  AlignDetectors_MoreRework.md  AlignDetectors_rework.md  Anaconda.md  Architecture Design Document.doc  ArchitectureDesignDocument.doc  Autodiff.md  Automated_Data_Reduction_Prototype.txt  DataProcessingUserInterface  DataProcessingUserInterface.md  DependenciesAndRestructure.md  Design Details for ComponentInfo.md  Design Details for DetectorInfo.md  Design Details for SpectrumInfo.md  Design-PawleyFunction.md  DistributionsAndDimensionlessData.md  EmbeddedInstrumentInfoNexus.md  Event Workspace Detailed Design Document.doc  Fit functions in python.md  General Information Catalog Search Detailed Design Document.doc  HandlingMovingInstruments.md  IDFLoadOrder.md  IPython.Notebook.Servers.md  IPythonAsELNs.md  InstrumentFetching.md  IntegratingAdept.md  Live Event Data Detailed Design Document.doc  LiveDataInterface.txt  Live_Event_Data_Detailed_Design_Document.doc  Managed Workspace Detailed Design Document.doc  Mantid4ReleasePlanning.md  MantidDesignReview.doc  MantidPythonScripting.doc  Mantid_As_a _SciPy_Styled_Package.md  MeasureUsageStatistics.md  (+47 more)
Pilot/Visualisation&Analysis/Visualisation/Paraview/MyCustomView/: CMakeLists.txt  MyCustomView.vcproj  MyCustomWindow.cxx  MyCustomWindow.h  SetUp.txt
(+1334 files in other folders)
